src/main/java/org/openrewrite/bms/internal/grammar/BMSParser.java
/*
 * Copyright 2026 the original author or authors.
 * <p>
 * Licensed under the Moderne Source Available License (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://docs.moderne.io/licensing/moderne-source-available-license
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from /Users/jon/Projects/github/openrewrite/rewrite-cobol/.claude/worktrees/ims-or-cics/src/main/antlr-bms/BMSParser.g4 by ANTLR 4.13.2
package org.openrewrite.bms.internal.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class BMSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UTF_8_BOM=1, WS=2, EOL=3, BMS_NAMED=4, BMS_STATEMENT=5, BMS_CONTINUATION=6, 
		COMMENT=7, UNKNOWN=8, CA_START=9, STRINGLITERAL=10, TEXT=11, BMS_STRINGLITERAL=12, 
		BMS_TEXT=13, COMMENT_TEXT=14, UNKNOWN_WS=15, UNKNOWN_STRINGLITERAL=16, 
		UNKNOWN_TEXT=17;
	public static final int
		RULE_compilationUnit = 0, RULE_statement = 1, RULE_bms = 2, RULE_bmsWord = 3, 
		RULE_bmsSequenceArea = 4, RULE_comment = 5, RULE_commentWord = 6, RULE_commentSequenceArea = 7, 
		RULE_unknown = 8, RULE_unknownWord = 9, RULE_unknownSequenceArea = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "statement", "bms", "bmsWord", "bmsSequenceArea", 
			"comment", "commentWord", "commentSequenceArea", "unknown", "unknownWord", 
			"unknownSequenceArea"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\uFEFF'", null, null, null, null, null, "'^^COMMENT^^'", "'^^UNKNOWN^^'", 
			"'^^CA_START^^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "UTF_8_BOM", "WS", "EOL", "BMS_NAMED", "BMS_STATEMENT", "BMS_CONTINUATION", 
			"COMMENT", "UNKNOWN", "CA_START", "STRINGLITERAL", "TEXT", "BMS_STRINGLITERAL", 
			"BMS_TEXT", "COMMENT_TEXT", "UNKNOWN_WS", "UNKNOWN_STRINGLITERAL", "UNKNOWN_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BMSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BMSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BMSParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 225792L) != 0)) {
				{
				{
				setState(22);
				statement();
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public BmsContext bms() {
			return getRuleContext(BmsContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public UnknownContext unknown() {
			return getRuleContext(UnknownContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(33);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BMS_STRINGLITERAL:
			case BMS_TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				bms();
				}
				break;
			case COMMENT_TEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				comment();
				}
				break;
			case CA_START:
			case UNKNOWN_STRINGLITERAL:
			case UNKNOWN_TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				unknown();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BmsContext extends ParserRuleContext {
		public BmsWordContext bmsWord() {
			return getRuleContext(BmsWordContext.class,0);
		}
		public BmsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterBms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitBms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitBms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BmsContext bms() throws RecognitionException {
		BmsContext _localctx = new BmsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bms);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			bmsWord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BmsWordContext extends ParserRuleContext {
		public TerminalNode BMS_TEXT() { return getToken(BMSParser.BMS_TEXT, 0); }
		public TerminalNode BMS_STRINGLITERAL() { return getToken(BMSParser.BMS_STRINGLITERAL, 0); }
		public BmsSequenceAreaContext bmsSequenceArea() {
			return getRuleContext(BmsSequenceAreaContext.class,0);
		}
		public BmsWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bmsWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterBmsWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitBmsWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitBmsWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BmsWordContext bmsWord() throws RecognitionException {
		BmsWordContext _localctx = new BmsWordContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bmsWord);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_la = _input.LA(1);
			if ( !(_la==BMS_STRINGLITERAL || _la==BMS_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(38);
				bmsSequenceArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BmsSequenceAreaContext extends ParserRuleContext {
		public TerminalNode CA_START() { return getToken(BMSParser.CA_START, 0); }
		public TerminalNode BMS_TEXT() { return getToken(BMSParser.BMS_TEXT, 0); }
		public TerminalNode BMS_STRINGLITERAL() { return getToken(BMSParser.BMS_STRINGLITERAL, 0); }
		public BmsSequenceAreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bmsSequenceArea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterBmsSequenceArea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitBmsSequenceArea(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitBmsSequenceArea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BmsSequenceAreaContext bmsSequenceArea() throws RecognitionException {
		BmsSequenceAreaContext _localctx = new BmsSequenceAreaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bmsSequenceArea);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(CA_START);
			setState(42);
			_la = _input.LA(1);
			if ( !(_la==BMS_STRINGLITERAL || _la==BMS_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public CommentWordContext commentWord() {
			return getRuleContext(CommentWordContext.class,0);
		}
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			commentWord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentWordContext extends ParserRuleContext {
		public TerminalNode COMMENT_TEXT() { return getToken(BMSParser.COMMENT_TEXT, 0); }
		public CommentSequenceAreaContext commentSequenceArea() {
			return getRuleContext(CommentSequenceAreaContext.class,0);
		}
		public CommentWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterCommentWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitCommentWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitCommentWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentWordContext commentWord() throws RecognitionException {
		CommentWordContext _localctx = new CommentWordContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_commentWord);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(COMMENT_TEXT);
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(47);
				commentSequenceArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentSequenceAreaContext extends ParserRuleContext {
		public TerminalNode CA_START() { return getToken(BMSParser.CA_START, 0); }
		public TerminalNode COMMENT_TEXT() { return getToken(BMSParser.COMMENT_TEXT, 0); }
		public CommentSequenceAreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentSequenceArea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterCommentSequenceArea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitCommentSequenceArea(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitCommentSequenceArea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentSequenceAreaContext commentSequenceArea() throws RecognitionException {
		CommentSequenceAreaContext _localctx = new CommentSequenceAreaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_commentSequenceArea);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(CA_START);
			setState(51);
			match(COMMENT_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnknownContext extends ParserRuleContext {
		public UnknownWordContext unknownWord() {
			return getRuleContext(UnknownWordContext.class,0);
		}
		public UnknownContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unknown; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterUnknown(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitUnknown(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitUnknown(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnknownContext unknown() throws RecognitionException {
		UnknownContext _localctx = new UnknownContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unknown);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			unknownWord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnknownWordContext extends ParserRuleContext {
		public TerminalNode UNKNOWN_TEXT() { return getToken(BMSParser.UNKNOWN_TEXT, 0); }
		public TerminalNode UNKNOWN_STRINGLITERAL() { return getToken(BMSParser.UNKNOWN_STRINGLITERAL, 0); }
		public UnknownSequenceAreaContext unknownSequenceArea() {
			return getRuleContext(UnknownSequenceAreaContext.class,0);
		}
		public UnknownWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unknownWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterUnknownWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitUnknownWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitUnknownWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnknownWordContext unknownWord() throws RecognitionException {
		UnknownWordContext _localctx = new UnknownWordContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unknownWord);
		int _la;
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNKNOWN_STRINGLITERAL:
			case UNKNOWN_TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				_la = _input.LA(1);
				if ( !(_la==UNKNOWN_STRINGLITERAL || _la==UNKNOWN_TEXT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(57);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(56);
					unknownSequenceArea();
					}
					break;
				}
				}
				break;
			case CA_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				unknownSequenceArea();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnknownSequenceAreaContext extends ParserRuleContext {
		public TerminalNode CA_START() { return getToken(BMSParser.CA_START, 0); }
		public TerminalNode UNKNOWN_TEXT() { return getToken(BMSParser.UNKNOWN_TEXT, 0); }
		public TerminalNode UNKNOWN_STRINGLITERAL() { return getToken(BMSParser.UNKNOWN_STRINGLITERAL, 0); }
		public UnknownSequenceAreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unknownSequenceArea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).enterUnknownSequenceArea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BMSParserListener ) ((BMSParserListener)listener).exitUnknownSequenceArea(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BMSParserVisitor ) return ((BMSParserVisitor<? extends T>)visitor).visitUnknownSequenceArea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnknownSequenceAreaContext unknownSequenceArea() throws RecognitionException {
		UnknownSequenceAreaContext _localctx = new UnknownSequenceAreaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_unknownSequenceArea);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(CA_START);
			setState(63);
			_la = _input.LA(1);
			if ( !(_la==UNKNOWN_STRINGLITERAL || _la==UNKNOWN_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}